--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VUE_APP_BASE_URL ='http://spring-production-ffed.up.railway.app:8081/'
+VUE_APP_BASE_URL ='https://spring-production-ffed.up.railway.app:8081/'
