--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.7",
     "@vueform/vueform": "^1.9.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "pinia": "^2.2.2",
+    "primevue": "^4.0.7",
     "vue": "^3.2.0",
     "vue-router": "^4.4.4",
     "vue3-toastify": "^0.2.3"
