add using chemical history chart

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vueform/vueform": "^1.9.6",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.4",
     "core-js": "^3.8.3",
     "pinia": "^2.2.2",
     "primeicons": "^7.0.0",
